--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,4 @@
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_TINY_EDITOR_API_KEY=your_tiny_editor_api_key
